@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.474 2005/11/08 05:11:22 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.475 2005/11/11 00:21:00 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  10 Nov 2005; Andrew Gaffney <agafney@gentoo.org>
+  src/net/server/gliserv.py:
+  dynamic module reloading (yipee!)
+  src/net/server/handlers/WebGLIHandler.py:
+  icons for drives
 
   7 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/handlers/WebGLIHandler.py:
